--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"web-vitals": "^3.3.0"
 	},
 	"type": "module",
 	"dependencies": {
