--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@datocms/svelte": "^1.2.0",
 		"@vercel/analytics": "^0.1.11",
 		"graphql-request": "^5.2.0"
 	}
