--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-	"name": "taniams",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-vercel": "^2.4.1",
-		"@sveltejs/kit": "^1.20.4",
-		"@types/gtag.js": "^0.0.12",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.5.3",
-		"web-vitals": "^3.3.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@datocms/svelte": "^1.2.0",
-		"graphql-request": "^5.2.0"
-	}
+  "name": "taniams",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-vercel": "^4.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/gtag.js": "^0.0.12",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.4.3",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "web-vitals": "^3.3.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "@datocms/svelte": "^2.0.4",
+    "graphql-request": "^5.2.0"
+  }
 }
