--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@sveltejs/kit": "^2.15.2",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/gtag.js": "^0.0.12",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.3",
     "svelte": "^5.0.0",
     "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
