--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@sveltejs/kit": "^2.15.2",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/gtag.js": "^0.0.12",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "svelte": "^5.0.0",
     "svelte-check": "^3.4.3",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.4.11",
@@ -27,6 +30,9 @@
   "type": "module",
   "dependencies": {
     "@datocms/svelte": "^4.0.1",
-    "graphql-request": "^5.2.0"
+    "bits-ui": "^0.22.0",
+    "graphql-request": "^5.2.0",
+    "lucide-svelte": "^0.473.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
